idea/testData/multiplatform/simple/d4/d4.kt
package foobar
import bar.baz

fun <!LINE_MARKER!>main<!>() {
    baz().foo()
}
